--- a/Live Lecture Feedback/Base.lproj/Main.storyboard
+++ b/Live Lecture Feedback/Base.lproj/Main.storyboard
@@ -836,6 +836,9 @@
                         </connections>
                     </tableView>
                     <toolbarItems/>
+                    <connections>
+                        <segue destination="Coi-89-suH" kind="show" identifier="SaveSession" id="qTs-fI-fQb"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3G9-Jw-EK5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1232,4 +1235,7 @@
         <image name="RedButton" width="100" height="100"/>
         <image name="ResetButton" width="200" height="100"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="qTs-fI-fQb"/>
+    </inferredMetricsTieBreakers>
 </document>
